<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".EventEditActivity">


    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/EditEventNameHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_name_hint" />

                    <EditText
                        android:id="@+id/EditEventName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="..."
                        android:hint="@string/event_name_hint"
                        android:inputType="textShortMessage"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/EditEventPublicHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_is_public" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_height="wrap_content">
                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/EditEventPublic" />
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/event_public_hint"
                             />
                    </LinearLayout>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/EditEventTypeHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_type_hint" />

                    <Spinner
                        android:id="@+id/EditEventType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/event_type_list"
                        android:prompt="@string/event_type_hint" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/EditEventStartHint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_date_start" />

                    <EditText
                        android:id="@+id/EditEventStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/date_format"
                        android:digits="1234567890-"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/EditEventEndHint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_date_end" />

                    <EditText
                        android:id="@+id/EditEventEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/date_format"
                        android:digits="1234567890-"
                        android:inputType="number" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/EditEventCalendarHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Calendar url" />

                    <EditText
                        android:id="@+id/EditEventCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="..."
                        android:hint="@string/event_calendar_hint"
                        android:inputType="textShortMessage"
                        android:singleLine="true" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/EditEventEmergencyHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_is_emergency_enabled" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_height="wrap_content">
                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/EditEventEmergency" />

                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/event_emergency_hint" />
                    </LinearLayout>


                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/KMLfileHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="KML file" />


                    <Button
                        android:text="Chose File"
                        android:id="@+id/chose_file"
                        android:layout_gravity="center"
                        android:onClick="onFilePickClicked"/>




                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/EditEventSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_submit"
                android:onClick="sendEventSubmit" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>