...
    tools:context=".authentification.LoginActivity">

    <!--    https://stackoverflow.com/questions/43143468/how-to-center-the-elements-in-constraintlayout-->


    <ScrollView
        android:id="@+id/sign_in_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
...
