<resources>
    <string name="app_name">PolyCrowd</string>
    <!-- CNF_EVENT -->
    <string name="event_title">*event_title*</string>
    <string name="event_is_public">Public</string>
    <string name="event_public_hint">If the event should be displayed to other users</string>
    <string name="event_name">Event Name</string>
    <string name="event_name_hint">Event Name</string>
    <string name="event_submit">Save Changes</string>
    <string name="event_type_hint">Event Type</string>
    <string name="event_calendar_hint">Schedule calendar url</string>
    <string name="event_is_emergency_enabled">Emergencies</string>
    <string name="event_emergency_hint">If the event should use the emergency button feature</string>
...
